# atomview

./: .gitignore  CHANGELOG.rst  Color Map.ipynb  Hydrogen Radial Part.ipynb  Orbital Plotting 2.ipynb  Orbital Plotting.ipynb  Plot Single.ipynb  Plot Wavefunction.ipynb  README.rst  Untitled.ipynb  app.spec  app_onefile.spec  generate_wikipedia_figures.ipynb  hydrogen_calculations.py  hydrogen_plotting.py  pyproject.toml  spherical_harmonic_plotting.py
docs/source/: conf.py  index.rst
scripts/: Color Map.ipynb  Plot Wavefunction.ipynb  Radial and Polar Parts.ipynb  Wavefunction Tables.ipynb  Wiki Figures.ipynb  app_icon.py  docs_figures.py
scripts/pyvista_testing/: Solid Sphere.ipynb  Untitled.ipynb  qt work.ipynb  ui_atomviewwindow.py
src/atomview/: app.py  atom_wavefunction.py  atomviewwindow.py  ui_atomviewwindow.py  utils.py  wavefunction_calc.py  wavefunction_mesh.py
src/atomview/ui/: atomviewwindow.py
tests/: test_dunno.py  test_plot.py  test_sph_harm.py
ui/: app.py  atomviewwindow.py  convert_ui_to_py.bat  ui_atomviewwindow.py  ui_atomviewwindow.ui
ui/dev/: convert_ui_to_py.bat
